--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     </section>
     <section class="mt10" id="tech">
       <div class="container">
-        <h2>脂肪除去の部位は<br>以下4つからお選びいただけます</h2>
+        <h2>脂肪除去の部位は<br>以下4つからお選び<br class="sp">いただけます</h2>
         <div>
           <article id="article1" class="techItem mt5">
             <h3>ジョールファット</h3>
@@ -329,7 +329,7 @@
     </section>
     <section class="desc py10">
       <div class="container">
-        <h2>術歴30年超の院長が<br>すべての施術を担当いたします</h2>
+        <h2>術歴30年超の院長が<br>すべての施術を<br class="sp">担当いたします</h2>
         <div class="mt5">
           <div class="descMedia"><img src="./lp/assets/img/desc.jpg" class="sp-hidden"><img
               src="./lp/assets/img/desc_sp.jpg" class="pc-hidden"></div>
@@ -427,7 +427,12 @@
     </section>
     <section class="bnr-area py10">
       <div class="container">
-        <h2>＼クルスカエリートも、人気です！／</h2>
+        <h2 class="pc">＼クルスカエリートも、<br class="sp">人気です！／</h2>
+        <div class="title sp">
+          <h2>＼</h2>
+          <h2>クルスカエリートも、<br>人気です！</h2>
+          <h2>／</h2>
+        </div>
         <div class="mt5"> <a href="./lp/coolsculpting/" target="_blank" rel="noopener"><img
               src="./lp/assets/img/bnr-coolsculpting.jpg" alt="クールスカルプティングエリート" class="pc"><img
               src="./lp/assets/img/bnr-coolsculpting_sp.jpg" alt="クールスカルプティングエリート" class="sp"></a>
@@ -444,7 +449,7 @@
             <div class="profileMedia"><img src="./lp/assets/img/profile4.jpg" alt="脂肪吸引はリバウンドが少ない痩身術です" class="pc"> <img
                 src="./lp/assets/img/profile4_sp.jpg" alt="脂肪吸引はリバウンドが少ない痩身術です" class="sp"></div>
             <div class="profileTxt">
-              <p class="profileName mt1">みずほクリニック
+              <p class="profileName">みずほクリニック
                 院長　小松磨史</p>
               <p class="profileHistory mt1">＜経歴＞
                 札幌医科大学・形成外科入局。札幌医科大学・大学院を卒業後、医学博士取得。H10年 米国フロリダ・モフィット国立癌センター勤務（ポストドクトラル・フェロー）。その後、札幌医科大学・形成外科
