--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <div class="sec works2_wrap">
         <h2>実際の症例写真</h2>
         <div class="slide sec mt5">
-          <ul class="slider-works works2_list" id="js-slider-works">
+          <ul class="slider-works works2_list container" id="js-slider-works">
             <li>
               <h3>頬脂肪吸引</h3>
               <p class="works2_img"><img
@@ -231,7 +231,7 @@
             <h3>ジョールファット</h3>
             <div class="techOnayami mt3">
               <div class="techOnayamiTxt">
-                <h4>このようなお悩みに</h4>
+                <h4>このような<br class="sp">お悩みに</h4>
                 <ul class="list-simple">
                   <li>口元のたるみ・膨らみ</li>
                   <li>口横のぽにょ</li>
@@ -256,7 +256,7 @@
             <h3>メーラーファット</h3>
             <div class="techOnayami mt3">
               <div class="techOnayamiTxt">
-                <h4>このようなお悩みに</h4>
+                <h4>このような<br class="sp">お悩みに</h4>
                 <ul class="list-simple">
                   <li>頬全体が膨らんでいる</li>
                   <li>顔が丸い</li>
@@ -280,7 +280,7 @@
             <h3>ナゾラビアルファット</h3>
             <div class="techOnayami mt3">
               <div class="techOnayamiTxt">
-                <h4>このようなお悩みに</h4>
+                <h4>このような<br class="sp">お悩みに</h4>
                 <ul class="list-simple">
                   <li>ほうれい線の溝が深い</li>
                   <li>小鼻横に影ができる</li>
@@ -304,7 +304,7 @@
             <h3>頬骨上の脂肪</h3>
             <div class="techOnayami mt3">
               <div class="techOnayamiTxt">
-                <h4>このようなお悩みに</h4>
+                <h4>このような<br class="sp">お悩みに</h4>
                 <ul class="list-simple">
                   <li>ピンポイントで頬肉が盛り上っている</li>
                   <li>頬肉をつまむと厚みがあり硬い</li>
