--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <div class="sec works2_wrap">
         <h2>実際の症例写真</h2>
         <div class="slide sec mt5">
-          <ul class="slider-works works2_list container" id="js-slider-works">
+          <ul class="slider-works works2_list" id="js-slider-works">
             <li>
               <h3>頬脂肪吸引</h3>
               <p class="works2_img"><img
