--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
         <div class="fvMediaIn"><img src="img/main2.png" alt="頬 or 顎下の脂肪吸引" class="fvMediaImg" /></div>
       </div>
       <div class="container">
-        <p class="mt5">頬の脂肪除去は、気になる部位の脂肪をピンポイントで除去する施術です。施術部位はジョールファット、メーラーファット、ナゾラビアルファット、頬骨上の脂肪からお選びいただけます。施術時間は30分弱、ダウンタイム（術後の赤み・腫れなど）がわずかでありながら、極端に体重が増加しない限りはリバウンドがほぼない人気の小顔治療です。
+        <p class="mt5">
+          頬の脂肪除去は、気になる部位の脂肪をピンポイントで除去する施術です。施術部位はジョールファット、メーラーファット、ナゾラビアルファット、頬骨上の脂肪からお選びいただけます。施術時間は30分弱、ダウンタイム（術後の赤み・腫れなど）がわずかでありながら、極端に体重が増加しない限りはリバウンドがほぼない人気の小顔治療です。
         </p>
       </div>
     </section>
@@ -159,8 +160,7 @@
           <ul class="slider-works works2_list" id="js-slider-works">
             <li>
               <h3>頬脂肪吸引</h3>
-              <p class="works2_img"><img
-                  src="img/casepic01.jpg"></p>
+              <p class="works2_img"><img src="img/casepic01.jpg"></p>
               <table class="works_table">
                 <tr>
                   <td>治療名：頬の脂肪除去（ジョールファット・メーラーファット・ナゾラビアルファット・頬骨上の脂肪のいずれか）　費用：1部位77,000円　　リスク・副作用：腫れ、内出血、漿液腫、血腫、傷跡など
@@ -171,8 +171,7 @@
             </li>
             <li>
               <h3>頬の脂肪吸引</h3>
-              <p class="works2_img"><img
-                  src="img/casepic02.jpg"></p>
+              <p class="works2_img"><img src="img/casepic02.jpg"></p>
               <table class="works_table">
                 <tr>
                   <td>治療名：脂肪吸引　費用：77,000円　治療に伴う可能性のあるリスク・副作用：腫れ、内出血、漿液腫、血腫、傷跡など</td>
@@ -181,8 +180,7 @@
             </li>
             <li>
               <h3>頬と首の脂肪吸引</h3>
-              <p class="works2_img"><img
-                  src="img/casepic03.jpg"></p>
+              <p class="works2_img"><img src="img/casepic03.jpg"></p>
               <table class="works_table">
                 <tr>
                   <td>治療名：脂肪吸引（頬／ジョールファット＋首）　費用：154,000円　治療に伴う可能性のあるリスク・副作用：腫れ、内出血、感染症、傷跡など</td>
@@ -249,7 +247,8 @@
                 </dd>
               </dl>
             </div>
-            <p class="mt3">ジョールファットは、口元横から口角下あたりにある脂肪の塊です。この部分の脂肪が下垂すると、口元付近にたるみが生じる他、口角が下がって「への字」になる・ブルドッグ顔・下膨れ顔になるといったことも多くあります。
+            <p class="mt3">
+              ジョールファットは、口元横から口角下あたりにある脂肪の塊です。この部分の脂肪が下垂すると、口元付近にたるみが生じる他、口角が下がって「への字」になる・ブルドッグ顔・下膨れ顔になるといったことも多くあります。
             </p>
           </article>
           <article id="article3" class="techItem pt8">
@@ -274,7 +273,8 @@
                 </dd>
               </dl>
             </div>
-            <p class="mt3">メーラーファットとは、目の下から頬骨上あたりにある厚みのある脂肪で、メーラーファットに厚みがあると頬がパンパンに膨らんで丸顔に見える他、年齢を重ねると下垂によってほうれい線やゴルゴラインの原因となります。</p>
+            <p class="mt3">
+              メーラーファットとは、目の下から頬骨上あたりにある厚みのある脂肪で、メーラーファットに厚みがあると頬がパンパンに膨らんで丸顔に見える他、年齢を重ねると下垂によってほうれい線やゴルゴラインの原因となります。</p>
           </article>
           <article id="article2" class="techItem pt8">
             <h3>ナゾラビアルファット</h3>
@@ -297,7 +297,8 @@
                 </dd>
               </dl>
             </div>
-            <p class="mt3">ナゾラビアルファットは、ほうれい線とゴルゴラインの間にある細長い脂肪で、この部分が下垂するとほうれい線の溝が深くなる他、小鼻横と頬の間に深い凹みが生じることで、顔の中心部に影ができて年齢よりも老けて見えることもあります。
+            <p class="mt3">
+              ナゾラビアルファットは、ほうれい線とゴルゴラインの間にある細長い脂肪で、この部分が下垂するとほうれい線の溝が深くなる他、小鼻横と頬の間に深い凹みが生じることで、顔の中心部に影ができて年齢よりも老けて見えることもあります。
             </p>
           </article>
           <article id="article4" class="techItem pt8">
@@ -333,7 +334,8 @@
         <div class="mt5">
           <div class="descMedia"><img src="./lp/assets/img/desc.jpg" class="sp-hidden"><img
               src="./lp/assets/img/desc_sp.jpg" class="pc-hidden"></div>
-          <p class="mt3">頬の脂肪除去治療はダウンタイムも少なく30分弱で終了する比較的ライトな施術ですが、リスクや副作用が全くないわけではありません。術後のトラブルなどを最大限に避けるためにも、当院では全ての施術においてワンドクター制による治療を行っております。診察から治療、アフターフォローまで、全て院長が担当いたしますのでお気軽にご相談下さい。
+          <p class="mt3">
+            頬の脂肪除去治療はダウンタイムも少なく30分弱で終了する比較的ライトな施術ですが、リスクや副作用が全くないわけではありません。術後のトラブルなどを最大限に避けるためにも、当院では全ての施術においてワンドクター制による治療を行っております。診察から治療、アフターフォローまで、全て院長が担当いたしますのでお気軽にご相談下さい。
           </p>
         </div>
       </div>
@@ -474,7 +476,8 @@
                   src="./lp/assets/img/point1.png" class="featureMediaPoint"> </div>
               <div class="featureInfo">
                 <h3>経験30年超の院長が<br class="sp">すべての施術を監修</h3>
-                <p>当院では美容皮膚科、美容外科、形成外科などで30年超の経験を持つ院長が全ての施術においてカウンセリング・診察から手術・アフターフォローまでを担当しています。また痩身治療として脂肪吸引術はもちろんのこと、輪郭形成・小顔注射・痩身マシンなど幅広い痩身治療を取り扱っており、当院が最も得意とする分野の一つになっています。
+                <p>
+                  当院では美容皮膚科、美容外科、形成外科などで30年超の経験を持つ院長が全ての施術においてカウンセリング・診察から手術・アフターフォローまでを担当しています。また痩身治療として脂肪吸引術はもちろんのこと、輪郭形成・小顔注射・痩身マシンなど幅広い痩身治療を取り扱っており、当院が最も得意とする分野の一つになっています。
                 </p>
               </div>
             </li>
@@ -483,7 +486,8 @@
                   src="./lp/assets/img/point2.png" class="featureMediaPoint"> </div>
               <div class="featureInfo">
                 <h3>美容皮膚科から美容外科<br class="sp">まで幅広く網羅</h3>
-                <p>当院は総合美容医療クリニックとして、美容外科手術からレーザー・光治療などの美肌治療まで豊富なラインナップを取りそろえており、美肌、エイジングケア、鼻・目元・輪郭などの整形、脂肪吸引や豊胸術など患者様のあらゆるニーズに幅広く対応できるように日々心がけております。
+                <p>
+                  当院は総合美容医療クリニックとして、美容外科手術からレーザー・光治療などの美肌治療まで豊富なラインナップを取りそろえており、美肌、エイジングケア、鼻・目元・輪郭などの整形、脂肪吸引や豊胸術など患者様のあらゆるニーズに幅広く対応できるように日々心がけております。
                 </p>
               </div>
             </li>
@@ -492,7 +496,8 @@
                   src="./lp/assets/img/point3.png" class="featureMediaPoint"> </div>
               <div class="featureInfo">
                 <h3>美容医療分野における<br class="sp">実績豊富なマシンを導入</h3>
-                <p>レーザー・光治療においては、患者様の期待にしっかりと応えられるよう、サイノシュア、キャンデラ、フォトナ、ウルセラといった米国・欧州・日本・イスラエルなどの美容医療分野において実績がある国で開発されたマシンを導入しています。
+                <p>
+                  レーザー・光治療においては、患者様の期待にしっかりと応えられるよう、サイノシュア、キャンデラ、フォトナ、ウルセラといった米国・欧州・日本・イスラエルなどの美容医療分野において実績がある国で開発されたマシンを導入しています。
                 </p>
               </div>
             </li>
@@ -550,6 +555,15 @@
     });
   </script>
   <!--//hide and seek-->
+
+  <script>
+    $(function () {
+      $('[data-pagetopbutton]').on('click', function () {
+        $('html, body').animate({ scrollTop: 0 }, 600);
+      });
+    });
+  </script>
+
 </body>
 
 </html>
